# hello-flask-app

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml  main.yml
kustomize/: manifest.yml
